# VOC_ai_agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  app_demo.py  pyproject.toml  render.yaml
docs/: PROJECT.md
eval_data/annotations/: evidence_annotations_v1.json
eval_data/gold/: gold_references_v1.json
eval_data/queries/: eval_queries_v1.json
examples/: DEMO.md  sample_reviews.csv  sample_reviews.json
fixtures/: mock_reviews_airpods.json
infra/compose/: docker-compose.local.yml
scripts/: inspect_ingestion.py  run_eval.py
src/voc/: __init__.py  config.py  logging.py
src/voc/adapters/: __init__.py
src/voc/analysis/: __init__.py  report.py
src/voc/api/: __init__.py  __main__.py  dependencies.py  main.py  schemas.py  store.py
src/voc/api/middleware/: __init__.py  errors.py
src/voc/api/routes/: entities.py  health.py  pipeline.py  query.py  runs.py  sources.py  upload.py
src/voc/app/: __init__.py  monitoring.py  orchestrator.py  source_validation.py  sync_service.py
src/voc/connectors/: __init__.py  base.py  csv.py  google_business.py  json_import.py  mock.py
src/voc/eval/: __init__.py  dataset.py  failure_analysis.py  judge.py  metrics.py  runner.py  schemas.py
src/voc/generation/: __init__.py  insight_gen.py  prompts.py
src/voc/ingestion/: __init__.py  dedup.py  evidence.py  normalizer.py
src/voc/llm/: __init__.py
src/voc/observability/: __init__.py
src/voc/persistence/: __init__.py  migrations.py  repository.py  seed_ids.py  session.py
src/voc/persistence/alembic/: env.py
src/voc/persistence/alembic/versions/: 0001_baseline.py  0002_tenancy_and_new_domain.py
src/voc/persistence/models/: __init__.py  account.py  alert.py  api_key.py  audit_log.py  base.py  dead_letter.py  entity.py  indexing_run.py  ingestion_attempt.py  listing.py  review.py  secrets_pointer.py  snapshot.py  source_connection.py  sync_job.py  user.py  workspace.py  workspace_member.py
src/voc/persistence/repositories/: __init__.py  entity_repo_sa.py  snapshot_repo_sa.py  source_connection_repo_sa.py  sync_job_repo_sa.py
src/voc/policy/: __init__.py
src/voc/processing/: __init__.py  chunker.py  embedder.py  indexer.py
src/voc/queue/: __init__.py
src/voc/retrieval/: __init__.py  retriever.py
src/voc/scheduler/: __init__.py
src/voc/schemas/: __init__.py  canonical.py  chunk.py  entity.py  evidence.py  insight.py  raw.py
src/voc/secrets/: __init__.py
src/voc/workers/: __init__.py
tests/: conftest.py
tests/test_app/: test_source_validation.py
tests/test_connectors/: test_csv.py  test_google_business.py  test_json_import.py
tests/test_ingestion/: test_dedup.py  test_evidence.py  test_normalizer.py
tests/test_persistence/: test_models_metadata.py  test_repositories_sa_parity.py  test_repository.py  test_source_connections.py
tests/test_retrieval/: test_retriever.py
